chore: cleanup NFT shortcuts and behaviours

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1351,7 +1351,9 @@
       "view_gallery": "View Gallery"
     },
     "toast": {
-      "spam_reported": "Your report has been received!"
+      "spam_reported": "Your report has been received!",
+      "hidden": "NFT hidden",
+      "unhidden": "NFT unhidden"
     }
   },
   "points": {
