--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1301,6 +1301,8 @@
   "nfts": {
     "empty_state_header": "NFTs",
     "empty_state_description": "Your NFTs will appear here!",
+    "report_nft_action_text": "Report",
+    "report_nft_confirm_description": "Confirm report of NFT?",
     "view_on_web": "View on Web",
     "display_mode_gallery": "Gallery",
     "display_mode_collections": "Collections",
@@ -1583,7 +1585,7 @@
       },
       "link_button_label": "Read more",
       "action_label": "Got it"
-    },    
+    },
     "send": {
       "to_smart_contract": {
         "description_1": "The address you entered is for a smart contract.",
@@ -1619,6 +1621,7 @@
   },
   "alert": {
     "ok": "Ok",
+    "cancel": "Cancel",
     "wallet_watching_mode": "This wallet is currently Watched. Import the Secret Recovery Phrase, Private Key, or pair your device.",
     "wallet_testing_mode": "Testnets are not supported by Swap. Disable Testnet Mode to continue.",
     "coming_soon": "Coming Soon!",
