--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -433,7 +433,6 @@
       "open_in_new_tab": "Open in New Tab",
       "switch_to_wallet": "Switch to Wallet",
       "send_to_wallet": "Send to Wallet",
-      "add_contact": "Add Contact",
       "view": "View"
     },
     "commands": {
@@ -481,7 +480,8 @@
         "add_as_watched_wallet": "Watch This Wallet",
         "view_on_ens": "View on ENS",
         "switch_to_wallet": "Switch to This Wallet",
-        "add_contact": "Add Contact",
+        "send_to_wallet": "Send to this Wallet",
+        "add_contact": "Add Contacts",
         "remove_contact": "Remove Contact",
         "copy_wallet_address": "Copy Address",
         "view_wallet_on_etherscan": "View on Etherscan",
