fix: tweak send to this wallet language

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -480,7 +480,7 @@
         "add_as_watched_wallet": "Watch This Wallet",
         "view_on_ens": "View on ENS",
         "switch_to_wallet": "Switch to This Wallet",
-        "send_to_wallet": "Send to this Wallet",
+        "send_to_wallet": "Send to This Wallet",
         "add_contact": "Add Contacts",
         "remove_contact": "Remove Contact",
         "copy_wallet_address": "Copy Address",
