fix: add contact language

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -481,7 +481,7 @@
         "view_on_ens": "View on ENS",
         "switch_to_wallet": "Switch to This Wallet",
         "send_to_wallet": "Send to This Wallet",
-        "add_contact": "Add Contacts",
+        "add_contact": "Add Contact",
         "remove_contact": "Remove Contact",
         "copy_wallet_address": "Copy Address",
         "view_wallet_on_etherscan": "View on Etherscan",
