--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -432,7 +432,7 @@
       "open": "Open",
       "open_in_new_tab": "Open in New Tab",
       "switch_to_wallet": "Switch to Wallet",
-      "send_to_wallet": "Send to Wallet",
+      "send_to_contact": "Send to Contact",
       "view": "View"
     },
     "commands": {
