--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -432,8 +432,7 @@
       "open": "Open",
       "open_in_new_tab": "Open in New Tab",
       "switch_to_wallet": "Switch to Wallet",
-      "send_to_wallet": "Send to Wallet",
-      "add_contact": "Add Contact",
+      "send_to_contact": "Send to Contact",
       "view": "View"
     },
     "commands": {
@@ -481,7 +480,8 @@
         "add_as_watched_wallet": "Watch This Wallet",
         "view_on_ens": "View on ENS",
         "switch_to_wallet": "Switch to This Wallet",
-        "add_contact": "Add Contact",
+        "send_to_wallet": "Send to This Wallet",
+        "add_contact": "Add as Contact",
         "remove_contact": "Remove Contact",
         "copy_wallet_address": "Copy Address",
         "view_wallet_on_etherscan": "View on Etherscan",
@@ -532,7 +532,8 @@
       "title_revealed": "Showing Small Balances"
     },
     "contact_toast": {
-      "title_added": "Added to Contacts"
+      "title_added": "Contact Added",
+      "title_removed": "Contact Removed"
     },
     "no_results": "No results",
     "pages": {
@@ -560,7 +561,7 @@
         "section_title": "My Wallets"
       },
       "my_contacts": {
-        "search_placeholder": "Select a your contact wallet",
+        "search_placeholder": "Select a contact to send to…",
         "section_title": "My Contacts"
       },
       "token_detail": {
